--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
     "production": "NODE_ENV=production webpack --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
     "postinstall": "npm run production"
   },
-  "devDependencies": {
-    "@popperjs/core": "^2.11.5",
+  "devDependencies": {    
+    "@studio-freight/lenis": "^1.0.25",
+    "animate.css": "^4.1.1",
     "animejs": "^3.2.1",
-    "autoprefixer": "^10.4.7",
-    "browser-sync": "^2.27.10",
+    "autoprefixer": "^10.4.16",
+    "browser-sync": "^2.29.3",
     "browser-sync-webpack-plugin": "^2.3.0",
-    "jquery": "^3.6.0",
+    "gsap": "^3.12.2",
+    "howler": "^2.2.4",
+    "jquery": "^3.7.1",
     "jquery-bridget": "^3.0.1",
-    "jquery-selectric": "^0.2.0",
+    "jquery-colorbox": "^1.6.4",
     "laravel-mix": "^6.0.49",
     "laravel-mix-polyfill": "^3.0.1",
-    "postcss": "^8.4.14",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.1",
-    "vue-template-compiler": "^2.6.14"
+    "motion": "^10.16.4",
+    "postcss": "^8.4.31",
+    "sass": "^1.68.0",
+    "sass-loader": "^13.3.2",
+    "split-type": "^0.3.3",
+    "vanilla-lazyload": "^17.8.4",
+    "web-audio-engine": "^0.13.4"
   }
 }
